--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -68,6 +68,14 @@
 		<%= raw @user.errors[:mobile_number].first %></span>
 	<% end %>
   </div>
+  <div class="field">
+  <div class="checkbox">
+    <%= f.label 'User Role' %>
+    <%#= f.check_box :is_admin %>
+	<%= f.select :is_admin, options_for_select([["Select Role", ""], ["Admin", 1], ["Merchant", 2], ["User", 3]], @user.is_admin)  %>
+    </div>
+  </div>
+
 
   <div class="field">
     <%= f.label :carrier_id %>
