--- a/app/views/merchants/_fetchAll.html.erb
+++ b/app/views/merchants/_fetchAll.html.erb
@@ -14,8 +14,11 @@
       <td><%= o_row.email %></td>
       <td><%= o_row.url %></td>
       <td><%= o_row.created_at.to_s(:pretty) %></td>
-      <td> <%= link_to image_tag("edit.png", :width => "16px", :height => "16px", :title => t("general.edit")), edit_merchant_path(o_row) %>
-		  <%= link_to image_tag("delete.png", :width => "16px", :height => "16px", :title => t("general.destroy")), o_row, :confirm => t('general.are_you_sure_to_delete'), :method => :delete %>
+      <td> 
+<% if session[:is_admin] == 1 %>
+		<%= link_to image_tag("edit.png", :width => "16px", :height => "16px", :title => t("general.edit")), edit_merchant_path(o_row) %>
+		<%= link_to image_tag("delete.png", :width => "16px", :height => "16px", :title => t("general.destroy")), o_row, :confirm => t('general.are_you_sure_to_delete'), :method => :delete %>
+<% end %>
       <%= link_to image_tag("detail-icon.png", :width => "16px", :height => "16px", :title => t("general.merchant_details")), merchant_list_path(o_row.id) %>
 		</td>
     </tr>
