--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -8,8 +8,10 @@
   <div id="div_update"><%= render 'fetchAll' %></div>
 <% end %>
 
+<% if session[:is_admin] == 1 %>
 <div class="btn">
 	<%= link_to t("general.Add"), new_merchant_path %>
 </div>
+<% end %>
 <div class="cl"></div>
 
