design issue resolved

--- a/app/views/fronts/_fetchAll.html.erb
+++ b/app/views/fronts/_fetchAll.html.erb
@@ -75,9 +75,9 @@
                                 <span><%= row.price %>% Discount</span><br />
 Monday To Saturday</div>
                                 <ul class="nav-list">
-									<li class="expandCatBox readMore plus"><a title="View Coupon" id="<%= @v %>_<%= row.id.to_i %>">
-										<%#= t("general.view_coupon") %>
-									</a> </li>
+									<li class="expandCatBox readMore plus">
+									<a title="View Coupon" id="<%= @v %>_<%= row.id.to_i %>">&nbsp;</a>
+								    </li>
 								</ul>
                                 </div>
                                 
