--- a/app/views/coupons/_form.html.erb
+++ b/app/views/coupons/_form.html.erb
@@ -1,5 +1,5 @@
-<div class="admintextbox">
-<div class="admintextbox-leftpart ">
+<div class="editablebox">
+
 <%= form_for @o_single do |f| %>
   <%= f.error_messages %>
   <p>
@@ -78,6 +78,7 @@
 <div class="btn"><%= link_to t("general.back"), coupons_path %></div>
 </p>
 <% end %>
-</div>
+
 <div class="cl"></div>
+
 </div>
