--- a/app/views/layouts/fronts.html.erb
+++ b/app/views/layouts/fronts.html.erb
@@ -35,7 +35,7 @@
 					<%= yield %>
 					<div class="cl"></div>
 				
-				<%= render 'layouts/front_footer' %>
+				<%#= render 'layouts/front_footer' %>
 			<div>
 		<div>
 	<div>
