--- a/app/views/layouts/_front_header.html.erb
+++ b/app/views/layouts/_front_header.html.erb
@@ -2,18 +2,16 @@
 
 		        	<ul>
 		            	<li><%= link_to t("general.home"), fronts_path %></li>
-						<li><%= link_to t("general.search_coupon"), search_coupons_path %></li>
-
-						<% if !session[:user_id].nil? %>
-							<% if session[:user_provider_id].nil? %>
-								<li><%= link_to t("general.logout"), :log_out %></li>
-							<% else %>
-								<li><%= link_to t("general.logout"), :log_out %></li>
-							<% end %>
-							
-						<% else %>
-
-						<% end %>
+									<li><%= link_to t("general.search_coupon"), search_coupons_path %></li>
+									<% if !session[:user_id].nil? %>
+										<% if session[:user_provider_id].nil? %>
+											<li><%= link_to t("general.logout"), :log_out %></li>
+										<% else %>
+											<li><%= link_to t("general.logout"), :log_out %></li>
+										<% end %>
+									<% else %>
+										<li><%= link_to t("general.sign_up"), new_front_path %></li>
+									<% end %>
 
 		            </ul>
 		        <div class="cl"></div>
